* Optimized Event observe/stopObserving and consolidated closures in event.js. [jddalton]

* Ensure all stylesheets have loaded before firing dom:loaded event. [#328 state:resolved] [Diego Perini, jddalton, zichzach]

* Implement Diego Perini's "doScroll" technique for DOMContentLoaded event support in IE. [Diego Perini, jddalton]

* unit test: Added ability to append the query param delay=n to any resource URI to delay its loading by "n" seconds. [jddalton]

* Add Event#getEventID to fix issues with event IDs on elements created by Element#cloneNode. [jddalton]

* Rewrite Event cache to avoid memory leaks in IE and unnecessary iterations. [#230 state:resolved] [jddalton]

* Ensure dom:loaded timer is always cleared. [#346 state:resolved] [Mike Belshe]

* Remove unused local variable "h" from Selector.handlers.child(). [#246 state:resolved] [jddalton]

* Fix issue where Opera 9.5 gets confused by complex selectors in $$(). [#157 state:resolved] [Andre Dupont. Paulo Pereira, Andrea Baron, jddalton]

* Make Element#readAttribute follow W3C specifications for Element#getAttribute by returning an empty string if there is no specified/default value. [jddalton]

* Ensure Form.serializeElements() does not return keys from the prototype chain (e.g., constructor, valueOf, toString). Closes #9609. [gryn, jddalton, kangax]

* Rewrite Form#serializeElements() making it more closely follow the W3C specifications. [#22, #85 state:resolved] [jddalton, kangax, Lonesome Boy]
  - Simulate input type=image coordinates with "x" and "y" options.
  - Make the "submit" option accept the element or element name.
  - Non-active submit buttons, disabled elements, input type=(file|reset), and null values are not serialized.

* Make Form#request pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]

* Make $F return null for unknown/unsupported elements. Closes #8381. [Christophe Porteneuve, jddalton, Michael Stillwell]
